--- a/frontend/src/components/style/Footer.scss
+++ b/frontend/src/components/style/Footer.scss
@@ -79,7 +79,7 @@
     display: block;
     right: 40px;
     top: 20px;
-    font-size: 24px;
+    font-family: "Pixeled";
   }
 
   ::-webkit-scrollbar {
@@ -139,7 +139,6 @@
     p {
       color: rgba(255, 255, 255, 1);
       padding: 0 12px;
-
     }
   }
 }
